...
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Clementine Remote</string>
    <string name="app_not_available">App not available!</string>


    <string name="connectdialog_connect">Connect</string>
    <string name="connectdialog_connecting">Connecting to Clementine</string>
    <string name="connectdialog_download_data">Downloading data</string>
    <string name="connectdialog_error">Could not reach host</string>
    <string name="connectdialog_ip_hint">Enter IP address</string>
    <string name="connect_intro">Pick the Clementine you want to control. It needs to be on the same Wi-Fi as this phone.</string>
    <string name="connect_on_network">On your network</string>
    <string name="connect_search_again">Search again</string>
    <string name="connect_searching">Looking for Clementine…</string>
    <string name="connect_searching_help">Not showing up? Check that its network remote is turned on, or enter its address below.</string>
    <string name="connect_server_address">%1$s · port %2$d</string>
    <string name="connect_not_searching">Not looking on this network</string>
    <string name="connect_not_searching_help">Without the Nearby devices permission, Clementine Remote can\'t find Clementine on your network. Enter its address below, or turn the permission on.</string>
    <string name="connect_enter_address">Or enter its address</string>
    <string name="connect_address">Address</string>
    <string name="connect_requirements">Needs Clementine %1$s or later, with Tools → Preferences → Network Remote turned on.</string>


...


    <string name="track_loved">Track loved &lt;3</string>
    <string name="track_banned">Track banned :-(</string>
    <string name="permissions_required_title">Permissions required</string>
    <string name="permissions_intro">Android will ask for:</string>
    <string name="permission_local_network">Nearby devices: Clementine Remote finds and talks to Clementine on your local network.</string>
    <string name="permission_notifications">Notifications: for the player\'s controls, and your downloads\' progress.</string>
    <string name="permission_phone">Phone: to lower Clementine\'s volume during calls.</string>
    <string name="permission_storage">Storage: to save the songs you download.</string>
    <string name="not_local_network_title">Clementine refused the connection</string>
    <string name="not_local_network">Clementine only accepts connections from its local network. To connect from elsewhere, turn off \"Only allow connections from the local network\" in its Network Remote settings.</string>
    <string name="too_many_wrong_auth_codes_title">Too many wrong auth codes</string>
    <string name="too_many_wrong_auth_codes">Clementine won\'t check another auth code from this phone for %s. Then enter the code shown in its Network Remote settings.</string>
    <!-- How long Clementine said to wait, in "for %s" above. -->
...
